fix scrollbar

--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -3,7 +3,7 @@
   padding: 1rem;
   text-align: left;
   color: white;
-  border-top:1rem;
+  border-top:0.5rem;
   border-style: solid;
   border-color: var(--color-brand);
   border-left:  0;
